--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "install": "^0.13.0",
     "react": "17.0.2",
     "react-native": "0.67.4",
+    "react-native-document-picker": "^8.1.0",
     "react-native-dropdown-picker": "^5.3.0",
     "react-native-pager-view": "^5.4.15",
     "react-native-safe-area-context": "^4.2.1",
