--- a/ios/BsAppRN/Info.plist
+++ b/ios/BsAppRN/Info.plist
@@ -37,7 +37,7 @@
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleDisplayName</key>
-	<string>BsAppRN</string>
+	<string>BusinessStandard</string>
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
 	<key>CFBundleIdentifier</key>
