--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
   },
   "dependencies": {
+    "@microsoft/signalr": "^6.0.9",
     "@react-native-async-storage/async-storage": "^1.17.0",
     "@react-navigation/bottom-tabs": "^6.2.0",
     "@react-navigation/native": "^6.0.8",
     "@react-navigation/native-stack": "^6.5.0",
+    "@react-navigation/stack": "^6.3.1",
     "@reduxjs/toolkit": "^1.8.0",
     "axios": "^0.26.1",
     "dayjs": "^1.11.3",
@@ -25,6 +27,7 @@
     "react-native": "0.67.4",
     "react-native-document-picker": "^8.1.0",
     "react-native-dropdown-picker": "^5.4.0",
+    "react-native-gesture-handler": "^2.7.0",
     "react-native-modal": "^13.0.1",
     "react-native-pager-view": "^5.4.15",
     "react-native-safe-area-context": "^4.2.1",
