--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@react-navigation/native-stack": "^6.5.0",
     "@react-navigation/stack": "^6.3.1",
     "@reduxjs/toolkit": "^1.8.0",
+    "@shopify/flash-list": "^1.3.1",
     "axios": "^0.26.1",
     "dayjs": "^1.11.3",
     "install": "^0.13.0",
@@ -28,6 +29,7 @@
     "react-native-document-picker": "^8.1.0",
     "react-native-dropdown-picker": "^5.4.0",
     "react-native-gesture-handler": "^2.7.0",
+    "react-native-gifted-chat": "^1.0.4",
     "react-native-modal": "^13.0.1",
     "react-native-pager-view": "^5.4.15",
     "react-native-safe-area-context": "^4.2.1",
